fix delete resource
